--- a/CodingTestStudy/js-codingtest/section2/등수구하기.html
+++ b/CodingTestStudy/js-codingtest/section2/등수구하기.html
@@ -6,14 +6,15 @@
 <body>
 <script>
     function solution(arr){
-        let n=arr.length;
-        let answer=Array.from({length:n}, ()=>1);
-        for(let i=0; i<n; i++){
-            for(let j=0; j<n; j++){
-                if(arr[j]>arr[i]) answer[i]++;
+        let result=Array.from({length:arr.length} ,()=>1)
+        for (let i=0; i<arr.length; i++){
+            for (let j=0; j<arr.length; j++){
+                if(arr[j]>arr[i]){
+                    result[i]++
+                }
             }
         }
-        return answer;
+        return result
     }
 
     let arr=[87, 89, 92, 100, 76];
