--- a/CodingTestStudy/js-codingtest/section2/점수계산.html
+++ b/CodingTestStudy/js-codingtest/section2/점수계산.html
@@ -5,21 +5,18 @@
 </head>
 <body>
 <script>
-
     const sol = (arr) =>{
-       let result=0;
-       let cir=0;
-       for (let i=0; i<arr.length; i++){
-           if(arr[i]===1){
-               cir++;
-               result+=cir;
-           }
-           else{
-               cir=0;
-           }
-
-       }
-       return result;
+        let result=0;
+        let plus=0;
+        for (let i=0; i<arr.length; i++){
+            if(arr[i]===1){
+                plus++
+                result+=plus;
+            }else{
+                plus=0;
+            }
+        }
+        return result
     }
 
     let arr=[1, 0, 1, 1, 1, 0, 0, 1, 1, 0];
