--- a/CodingTestStudy/js-codingtest/section3/회문문자열.html
+++ b/CodingTestStudy/js-codingtest/section3/회문문자열.html
@@ -35,11 +35,11 @@
 
     const sol=(s)=>{
         s=s.toLowerCase()
-        let answer="YES"
-        let len=s.length
-
-        if(s.split('').reverse().join('')!=s) return "NO";
-        return answer;
+        let result="YES"
+        if(s.split("").reverse().join("")!==s){
+            return "NO"
+        }
+        return result;
     }
 
     let str="goooG";
