--- a/CodingTestStudy/js-codingtest/section4/멘토링.html
+++ b/CodingTestStudy/js-codingtest/section4/멘토링.html
@@ -5,35 +5,29 @@
 </head>
 <body>
 <script>
-    const sol = (test) =>{
+    function solution(test){
         let answer=0;
-        let m=test.length;
-        // 총 시험 횟수
-        let n=test[0].length;
-        // 학생 명수
-
-
-        for (let i=1; i<=n; i++){
-            for(let j=1; j<n; j++){
+        m=test.length;
+        n=test[0].length;
+        for(let i=1; i<=n; i++){
+            for(let j=1; j<=n; j++){
                 let cnt=0;
-                //m을 모두 만족하는 경우의 수
                 for(let k=0; k<m; k++){
                     let pi=pj=0;
                     for(let s=0; s<n; s++){
                         if(test[k][s]===i) pi=s;
                         if(test[k][s]===j) pj=s;
                     }
-                    if(pi<pj) cnt++
+                    if(pi<pj) cnt++;
                 }
-                if(cnt===m) answer++
-
+                if(cnt===m) answer++;
             }
         }
         return answer;
     }
 
     let arr=[[3, 4, 1, 2], [4, 3, 2, 1], [3, 1, 4, 2]];
-    console.log(sol(arr));
+    console.log(solution(arr));
 </script>
 </body>
 </html>
