--- a/CodingTestStudy/js-codingtest/section5/ 공통원소 구하기.html
+++ b/CodingTestStudy/js-codingtest/section5/ 공통원소 구하기.html
@@ -6,23 +6,23 @@
 <body>
 <script>
     const sol =(a,b)=>{
-
-        a.sort((a,b)=>a-b);
-        b.sort((a,b)=>a-b);
-
-        let answer=[];
+        a=a.sort();
+        b=b.sort((a,b)=>a+b)
+        let result=[];
         let p1=0;
         let p2=0;
+
         while(p1<a.length && p2<b.length){
-            if(a[p1]==b[p2]){
-                answer.push(a[p1++])
+            if(a[p1]===b[p2]){
+                result.push(a[p1])
                 p2++
             }
             else if(a[p1]<b[p2]){
                 p1++
             }
+            else p2++
         }
-        return answer;
+        return result
     }
     let a=[1, 3, 9, 5, 2];
     let b=[3, 2, 5, 7, 8];
