--- a/CodingTestStudy/js-codingtest/section5/연속 부분수열 1.html
+++ b/CodingTestStudy/js-codingtest/section5/연속 부분수열 1.html
@@ -6,8 +6,19 @@
 <body>
 <script>
     const sol = (n,a) =>{
-        
-
+        let result=0;
+        let sum=0;
+        let p1=0;
+        for(let i=0; i<a.length; i++) {
+            sum += a[i];
+            if(n===sum)
+                result++
+            while(sum>=n){
+                sum-=a[p1++];
+                if(n===sum) result++
+            }
+        }
+        return result
     }
 
     let a=[1, 2, 1, 3, 1, 1, 1, 2];
