--- a/CodingTestStudy/js-codingtest/section5/연속 부분수열 2.html
+++ b/CodingTestStudy/js-codingtest/section5/연속 부분수열 2.html
@@ -7,25 +7,18 @@
 <script>
 
     const sol= (n,a) =>{
+        let result=0;
         let sum=0;
-        let answer=0;
-        let lt=0;
-
-        for (let rt=0; rt<a.length; rt++){
-            sum+=a[rt];
-            console.log(sum)
-
-
-            while(sum>n) {
-                sum -= a[lt++]
+        let p1=0;
+        for (let i=0; i<a.length; i++){
+            sum+=a[i];
+            while(sum>n){
+                sum-=a[p1++]
             }
-            answer+=(rt-lt+1)
-            }
+            result+=(i-p1+1);
+        }
 
-
-
-
-        return answer
+        return result
     }
     let a=[1, 3, 1, 2, 3];
     console.log(sol(5, a));
