--- a/CodingTestStudy/js-codingtest/section 6/괄호문자제거.html
+++ b/CodingTestStudy/js-codingtest/section 6/괄호문자제거.html
@@ -6,17 +6,15 @@
   <body>
     <script>
       const sol = (s) => {
-        let answer = "";
-        let stack = [];
+        let result=[];
+        s=s.split("")
 
-        for (let x of s) {
-          if (x === ")") {
-            while (stack.pop()!=='(');
-          }
-          else stack.push(x);
+        for(let x of s){
+          result.push(x)
         }
-        answer=stack.join("");
-        return answer;
+
+
+        return result
       };
 
       let str = "(A(BC)D)EF(G(H)(IJ)K)LM(N)";
