--- a/CodingTestStudy/js-codingtest/section 6/올바른 괄호.html
+++ b/CodingTestStudy/js-codingtest/section 6/올바른 괄호.html
@@ -1,31 +1,31 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>출력결과</title>
-  </head>
-  <body>
-    <script>
-      const sol = (s) => {
-        let result = "YES";
-        let list = [];
+<head>
+  <meta charset="UTF-8">
+  <title>출력결과</title>
+</head>
+<body>
+<script>
+  function solution(s){
+    let result="YES";
+    let array=[];
+    s=s.split("")
+    for(let i=0; i<s.length; i++){
+      if(s[i]==='('){
+        array.push(s[i])
+      }else {
+        if(array.length===0){
+          result="NO"
+        }else array.pop();
+      }
+    }
+    if(array.length>0)
+      result="NO"
 
-        for (let x of s) {
-          if (x === "(") {
-            list.push(x);
-          } else {
-            if (list.length !== 0) {
-              return "NO";
-            }
-            list.pop();
-          }
-        }
-        if (list.length === 0) {
-          return result;
-        }
-      };
+    return result;
+  }
 
-      let a = "(()(()))(()";
-      console.log(sol(a));
-    </script>
-  </body>
+  let a="())";
+  console.log(solution(a));
+</script>
+</body>
 </html>
