--- a/CodingTestStudy/js-codingtest/section 6/괄호문자제거.html
+++ b/CodingTestStudy/js-codingtest/section 6/괄호문자제거.html
@@ -1,24 +1,50 @@
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>출력결과</title>
-  </head>
-  <body>
-    <script>
-      const sol = (s) => {
-        let result=[];
-        s=s.split("")
+<head>
+  <meta charset="UTF-8">
+  <title>출력결과</title>
+</head>
+<body>
+<script>
+  function solution(s){
+    let answer;
+    let stack=[];
+    for(let x of s){
+      if(x===')'){
+        while(stack.pop()!=='(');
+      }
+      else stack.push(x);
+    }
+    answer=stack.join('');
+    return answer;
+  }
 
-        for(let x of s){
-          result.push(x)
-        }
-
-
-        return result
-      };
-
-      let str = "(A(BC)D)EF(G(H)(IJ)K)LM(N)";
-      console.log(sol(str));
-    </script>
-  </body>
+  let str="(A(BC)D)EF(G(H)(IJ)K)LM(N)";
+  console.log(solution(str));
+</script>
+</body>
 </html>
+
+
+<!--<html>-->
+<!--<head>-->
+<!--  <meta charset="UTF-8">-->
+<!--  <title>출력결과</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<script>-->
+<!--  function solution(s){-->
+<!--    let answer="";-->
+<!--    let stack=[];-->
+<!--    for(let x of s) {-->
+<!--      if(x === '(') stack.push(x);-->
+<!--      else if (x === ')') stack.pop();-->
+<!--      else if(stack.length === 0) answer += x;-->
+<!--    }-->
+<!--    return answer;-->
+<!--  }-->
+
+<!--  let str="(A(BC)D)EF(G(H)(IJ)K)LM(N)";-->
+<!--  console.log(solution(str));-->
+<!--</script>-->
+<!--</body>-->
+<!--</html>-->
