--- a/CodingTestStudy/js-codingtest/section 6/교육과정 설계.html
+++ b/CodingTestStudy/js-codingtest/section 6/교육과정 설계.html
@@ -6,17 +6,17 @@
   <body>
     <script>
       const sol = (need, plan) => {
-        let answer = "YES";
-        let queue = need.split("");
+        let result="YES"
+        let queue=need.split("");
 
-        for (let x of plan) {
-          if (queue.includes(x)) {
-            if (x !== queue.shift()) return "NO";
+        for (let x of plan){
+          if(queue.includes(x)){
+            if(x!==queue.shift()) return "NO"
           }
         }
-        if (queue.length > 0) return "NO";
+        if(queue.length>0) return "NO"
 
-        return answer;
+        return result
       };
 
       let a = "CBA";
