--- a/CodingTestStudy/js-codingtest/section 7/선택 정렬.html
+++ b/CodingTestStudy/js-codingtest/section 7/선택 정렬.html
@@ -6,15 +6,16 @@
   <body>
     <script>
       const sol = (arr) => {
-        let answer=arr;
-        for (let i=0; i<arr.length-1; i++){
+        let result=arr;
+        for(let i=0; i<arr.length-1; i++){
           let idx=i;
           for (let j=i+1; j<arr.length; j++){
             if(arr[j]<arr[idx]) idx=j;
           }
-          [arr[i],arr[idx]]=[arr[idx],arr[i]];
+          [arr[i], arr[idx]]=[arr[idx], arr[i]]
         }
-        return answer;
+
+        return result;
       };
 
       let arr = [13, 5, 11, 7, 23, 15];
