--- a/CodingTestStudy/js-codingtest/section 7/장난꾸러기 현수.html
+++ b/CodingTestStudy/js-codingtest/section 7/장난꾸러기 현수.html
@@ -6,7 +6,15 @@
 <body>
 <script>
     function solution(arr){
+        let result=[];
+        let newArr=arr.slice();
+        newArr=newArr.sort((a,b)=>a-b);
+        for(let i=0; i<arr.length; i++){
 
+            if(newArr[i]!==arr[i])
+                result.push(i+1);
+        }
+        return result
     }
 
     let arr=[120, 125, 152, 130, 135, 135, 143, 127, 160];
