--- a/CodingTestStudy/js-codingtest/section 7/뮤직비디오(결정알고리즘).html
+++ b/CodingTestStudy/js-codingtest/section 7/뮤직비디오(결정알고리즘).html
@@ -5,9 +5,33 @@
 </head>
 <body>
 <script>
+    function count(songs,mid){
+        let sum=0;
+        let count=1;
+        for(let x of songs){
+            if(sum+x>mid){
+                count++
+                sum=x;
+            }
+            else sum+=x
+        }
+
+        return count
+    }
 
     function solution(m, songs){
         let result=0;
+        let lt=Math.max(...songs);
+        let rt=songs.reduce((a,b)=> a+b,0);
+        while(lt<=rt){
+            let mid=parseInt((lt+rt)/2)
+            if(count(songs,mid)<=m){
+                result=mid;
+                rt=mid-1;
+            }
+            else lt=mid+1
+        }
+
 
 
         return result
